# finot

./: .env.example  .gitignore  README.md  code_review_report.md  db.json  en.json  index.html  json-server-config.json  package-lock.json  package.json  pages_prompt.txt  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: .gitignore  README.md  pyproject.toml  test_upload.txt
backend-api_documentation/: core_api_docs.md  qa_api_docs.md
backend/config/: settings.py  urls.py
backend/core/: admin.py  backends.py  emails.py  models.py  permissions.py  serializers.py
backend/core/migrations/: 0001_initial.py  0002_alter_role_name.py
backend/donation/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/donation/migrations/: 0001_initial.py
backend/questionanswer/: admin.py  models.py  serializers.py  views.py
backend/questionanswer/migrations/: 0001_initial.py  0002_answer_is_approved.py
backend/service/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/service/migrations/: 0001_initial.py  0002_family_familymembership.py  0003_event.py  0004_serviceconfiguration_servicegroupmembership_and_more.py
backend/student/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/student/migrations/: 0001_initial.py  0002_remove_studentprofile_baptismal_name.py
docs/: AUTH_SYSTEM_UPDATES.md  FRONTEND_ARCHITECTURE.md  feather-icons-list.txt
frontend/: .env  package-lock.json  tailwind.config.ts
public/: firebase-messaging-sw.js
src/: App.tsx  (+2 more)
(+126 files in other folders)
